--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -179,6 +179,7 @@ DEFAULTS
     • |[a|, |]a|, |[A|, |]A| navigate through the |argument-list|
     • |[b|, |]b|, |[B|, |]B| navigate through the |buffer-list|
     • |[<Space>|, |]<Space>| add an empty line above and below the cursor
+    • |[p|, |]p| paste linewise above and below the cursor
 
 • Snippet:
   • `<Tab>` in Insert and Select mode maps to `vim.snippet.jump({ direction = 1 })`
